# locale-forge

./: .gitignore  LICENSE  README.md  pyproject.toml
locale_forge/: __init__.py  analyzer.py  cli.py  parser.py  scanner.py  syncer.py  validator.py
